<resources>
    <string name="app_name">SmartKart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user">New user? Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Name">Name</string>
    <string name="CnfrmPassword">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="enter_otp">Please enter OTP sent at:</string>
    <string name="verify">Verify your Email</string>
    <string name="Submit">Submit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="welcomeuser">Welcome, User</string>
    <string name="my_orders">My Orders</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="Account">Account</string>
    <string name="wishList">Wish List</string>
    <string name="savedAddress">Saved address</string>
    <string name="Help"><![CDATA[Help & Support]]></string>
    <string name="raise_issue">Raise an issue</string>
    <string name="how_to">How to use?</string>
    <string name="logout">Log Out</string>
    <string name="change_pswd">Change password</string>
    <string name="edit_profile2">Edit Profile</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="placeorder">continue to pay</string>
    <string name="addToCart">Add to cart</string>
    <string name="goToCart">Go to cart</string>
    <string name="buyNow">Buy now</string>
    <string name="description">Description</string>
    <string name="resendOtp">Resend Otp</string>
    <string name="newPassword">New Password</string>
    <string name="CnfrmNewPassword">Confirm new password</string>
    <string name="recentOrders">Recent Orders</string>
    <string name="wishListTitle">Wishlist</string>
    <string name="paymentTitle">Payment</string>
    <string name="cards">Cards/Netbanking</string>
    <string name="Upi">UPI</string>
    <string name="cod">Cash on delivery</string>
    <string name="place_order">Place order</string>
    <string name="order_placed">Order placed successfully</string>
    <string name="continue_shopping">continue shopping</string>
    <string name="name_custom">SmartKart</string>
    <string name="notifications">Notifications</string>
    <string name="oops">Cart is Empty</string>
    <string name="oops2">Continue shopping</string>
    <string name="ooops">Oops! looks empty here</string>
    <string name="reset_password">Reset Password</string>
    <string name="order_details">Order Details</string>
    <string name="order_summary">Order summary</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="totalAmt">Total Amount</string>
    <string name="order_dat">Order Date</string>
    <string name="order_time">Order TIme</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="mob_no">Mobile No:</string>
    <string name="user_details">Your Details</string>
    <string name="oopps">No orders placed yet!</string>
    <string name="dollar">$ %1$s</string>
    <string name="order_id">Order ID: %1$s</string>
    <string name="otp_sent">OTP sent</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="hi">Hi %1$s</string>
    <string name="About">About this product</string>


</resources>