<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:src="@drawable/arrow_back_ios"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/paymentTitle"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/payment_method_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Select payment method"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <RadioGroup
        android:id="@+id/parent_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/payment_method_text"
        app:layout_constraintTop_toBottomOf="@+id/payment_method_text">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"

            android:text="@string/cards" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/Upi" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cod" />
    </RadioGroup>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="only cash on delivery is available right now!"
        android:textColor="@color/black"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/parent_radio"
        app:layout_constraintTop_toBottomOf="@+id/parent_radio" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Amount to pay"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/placeOrderButton" />

    <TextView
        android:id="@+id/amount_to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1999"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/placeOrderButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/placeOrderButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/place_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha=".3"
        android:visibility="gone"
        />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/order_placed_card"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            >
            <ImageView
                android:id="@+id/order_placed_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/order_placed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/order_placed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_placed"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_placed_img"
                />

            <TextView
                android:id="@+id/continue_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_shopping"
                android:layout_marginTop="10dp"
                android:textColor="@color/teal_700"
                android:textStyle=""
                android:textSize="12dp"
                android:fontFamily="sans-serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_placed_text"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>