<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".entry.ResetPasswordActivity"
    android:id="@+id/snackReset"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="268dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/reset_password"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/resetPassword"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/resetcnfrmPassword"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/CnfrmNewPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBtn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/Submit"
            android:textAllCaps="false"
            android:textSize="20sp"
            />

    </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#4D000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>